--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,8 @@ buildscript {
 
         app_compat_version = '1.1.0'
         android_core_ktx_version = '1.2.0'
+        coroutine_version = '1.3.7'
+
         constraint_layout_version = '1.1.3'
         recycler_view_version = '1.1.0'
         groupie_version = '2.8.0'
@@ -39,6 +41,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
