finished adding tracklist to album details

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -8,3 +8,4 @@ include ':features:albumlist'
 include ':apirest'
 include ':features:albumdetail'
 include ':features:github'
+include ':features:tracklist'
