add exoplayer and player feature

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -9,3 +9,4 @@ include ':apirest'
 include ':features:albumdetail'
 include ':features:github'
 include ':features:tracklist'
+include ':features:playerview'
