--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,3 +15,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Android Github Action
       uses: Vukan-Markovic/Github-Android-Action@1.2
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: app-gihub-apk.apk
+        path: android/app/build/outputs/apk/debug/app-debug.apk
