--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,4 +19,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: app-gihub-apk.apk
-        path: android/app/build/outputs/apk/debug/app-debug.apk
+        path: ./android/app/build/outputs/apk/debug/app-debug.apk
