--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,20 +42,17 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$app_compat_version"
     implementation "androidx.core:core-ktx:$android_core_ktx_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
-    implementation "androidx.recyclerview:recyclerview:$recycler_view_version"
-    implementation "com.xwray:groupie:$groupie_version"
-    implementation "com.xwray:groupie-kotlin-android-extensions:$groupie_version"
 
     implementation "org.koin:koin-android:$koin_version"
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    implementation 'com.google.android.exoplayer:exoplayer:2.11.4'
+    implementation "com.google.android.exoplayer:exoplayer:$exoplayer_version"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation("com.squareup.okhttp3:okhttp:3.12.8") {
+    implementation("com.squareup.okhttp3:okhttp:$ok_http_version") {
         force = true
     }
 
@@ -66,9 +63,4 @@ dependencies {
     implementation project(":features:albumdetail")
     implementation project(":features:github")
     implementation project(":features:playerview")
-
-    testImplementation "junit:junit:$junit_version"
-    testImplementation "io.mockk:mockk:$mockk_version"
-    androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 }
