--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,11 +21,19 @@ buildscript {
         constraint_layout_version = '1.1.3'
         recycler_view_version = '1.1.0'
         groupie_version = '2.8.0'
+        dot_loader_version = '1.0.2'
+        card_view_version = '1.0.0'
+        lifecycle_version = '2.2.0'
+
+        glide_version = '4.11.0'
 
         koin_version = '2.1.5'
         retrofit_version = '2.9.0'
+        ok_http_version = '3.12.8'
 
         nav_version = '2.2.2'
+
+        exoplayer_version = '2.11.4'
 
         junit_version = '4.12'
         mockk_version = '1.10.0'
