--- a/android/features/albumdetail/build.gradle
+++ b/android/features/albumdetail/build.gradle
@@ -28,6 +28,9 @@ android {
             sourceCompatibility 1.8
             targetCompatibility 1.8
         }
+        testOptions {
+            unitTests.includeAndroidResources = true
+        }
     }
 
 }
