--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,5 +17,12 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Android Builder
-      uses: b4s36t4/Android-Action@0.0.1
+    - name: Android Build
+      uses: ./gradlew build
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        # Artifact name
+        name: # optional
+        # A file, directory or wildcard pattern that describes what to upload
+        path:
