--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,11 +18,9 @@ jobs:
       with:
         java-version: 1.8
     - name: Android Build
-      uses: ./gradlew build
+      uses: vgaidarji/android-github-actions-build@v1.0.1
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
       with:
-        # Artifact name
-        name: # optional
-        # A file, directory or wildcard pattern that describes what to upload
-        path:
+        name: app-github.apk
+        path: app/build/output/apk/debug/app-debug.apk
