--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         versionCode 1
         versionName rootProject.ext.versionName
 
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -33,6 +34,9 @@ android {
         kotlinOptions {
             jvmTarget = JavaVersion.VERSION_1_8.toString()
         }
+        dataBinding {
+            enabled = true
+        }
     }
 
 }
@@ -43,7 +47,10 @@ dependencies {
     implementation "androidx.core:core-ktx:$android_core_ktx_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
 
+    implementation "androidx.multidex:multidex:$multidex_version"
+
     implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
@@ -59,6 +66,7 @@ dependencies {
     implementation project(":interfaces")
     implementation project(":apirest")
     implementation project(":design")
+    implementation project(":data")
     implementation project(":features:albumlist")
     implementation project(":features:albumdetail")
     implementation project(":features:github")
