--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 
         // Dependencies versions
         kotlin_version = '1.3.70'
+        multidex_version = "2.0.1"
 
         app_compat_version = '1.1.0'
         android_core_ktx_version = '1.2.0'
