--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.ext.compileSDKVersion
@@ -24,17 +23,11 @@ android {
         }
     }
 
+
     android {
         compileOptions {
             sourceCompatibility 1.8
             targetCompatibility 1.8
-        }
-        testOptions {
-            unitTests.includeAndroidResources = true
-        }
-
-        dataBinding {
-            enabled = true
         }
     }
 
@@ -42,11 +35,14 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:$app_compat_version"
     implementation "androidx.core:core-ktx:$android_core_ktx_version"
 
-    implementation "androidx.recyclerview:recyclerview:$recycler_view_version"
-    implementation "com.xwray:groupie:$groupie_version"
-    implementation "com.xwray:groupie-kotlin-android-extensions:$groupie_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
+    implementation "org.koin:koin-android:$koin_version"
+
+    implementation project(":interfaces")
+
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
 }
