--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include ':features:albumdetail'
 include ':features:github'
 include ':features:tracklist'
 include ':features:playerview'
+include ':data'
