--- a/features/albumdetail/build.gradle
+++ b/features/albumdetail/build.gradle
@@ -31,6 +31,10 @@ android {
         testOptions {
             unitTests.includeAndroidResources = true
         }
+
+        dataBinding {
+            enabled = true
+        }
     }
 
 }
@@ -47,14 +51,19 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     implementation project(":interfaces")
     implementation project(":design")
+    implementation project(":data")
+
     implementation project(":features:tracklist")
 
     testImplementation "junit:junit:$junit_version"
