add tests for viewModels and add mvvm to tracklist

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,5 @@ dependencies {
     implementation project(":features:albumdetail")
     implementation project(":features:github")
     implementation project(":features:playerview")
+    implementation project(":features:tracklist")
 }
